--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,20 +1,22 @@
 .a {
-  height: 100vh;
   display: flex;
   align-items: center;
+  /* background-color: red; */
 }
 
 .a-left {
-  flex: 1;
+  /* flex: 1; */
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
-  height: 100%;
+  width: 30%;
+  /* background-color: blue; */
 }
 
 .a-right {
   flex: 1;
+  padding: 20px;
 }
 
 .a-card.bg {
@@ -26,7 +28,7 @@
 
 .a-card {
   width: 60%;
-  height: 70vh;
+  height: 60vh;
   border-radius: 30px;
   position: relative;
   overflow: hidden;
@@ -34,12 +36,16 @@
 
 .a-img {
   width: 100%;
-  height: 110%;
+  height: 100%;
   object-fit: cover;
 }
 
 .a-title {
   font-weight: 400;
+}
+
+.a-title-strong { 
+  color: #8b71b5;
 }
 
 .a-sub {
@@ -67,35 +73,32 @@
   margin-bottom: 10px;
 }
 
-
-
-/*  */
-@media screen and (max-width: 480px) {
-  .a{
+/* Media Queries */
+@media screen and (max-width: 768px) {
+  .a {
     flex-direction: column;
-    text-align: center;
+    text-align: left;
     margin-top: 50px;
   }
 
   .a-left {
     width: 100%;
-  }
-
-  .a-img {
-    height: 100%;
+    height: 300px;
   }
 
   .a-card {
-    height: 30vh;
-  }
-
-  .a-right{
-    padding: 20px;
+    width: 80%;
+    height: 200px;
   }
 }
 
-@media screen and (max-width: 400px) {
-  .a {
-    font-size: 12px;
+@media screen and (max-width: 480px) {
+  .a-left {
+    height: 200px;
+  }
+
+  .a-card {
+    width: 90%;
+    height: 150px;
   }
 }
